--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,6 @@
 
   <div class="btn-container margin-top">
     <button ion-button full margin-top color="secondary" (click)="navigateToCalculationPage()">محاسبه سرعت</button>
-    <button ion-button full margin-top>تاریخچه</button>
+    <button ion-button full margin-top (click)="navigateToHistoryPage()">تاریخچه</button>
   </div>
 </ion-content>
