--- a/src/pages/calculator/calculator.html
+++ b/src/pages/calculator/calculator.html
@@ -6,5 +6,64 @@
 
 
 <ion-content padding>
+  <ion-list radio-group disabled="calculating" [(ngModel)]="_moveType">
+    <ion-list-header text-right>
+      نوع حرکت
+    </ion-list-header>
 
+    <ion-item>
+      <ion-icon item-left name="car"></ion-icon>
+      <ion-label>ماشین</ion-label>
+      <ion-radio value="1" checked="true"></ion-radio>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon item-left name="walk"></ion-icon>
+      <ion-label>پیاده</ion-label>
+      <ion-radio value="2"></ion-radio>
+    </ion-item>
+
+  </ion-list>
+
+  <ion-card>
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-label>فاصله پیموده شده:</ion-label>
+          </ion-col>
+          <ion-col>
+            <h2 margin-top float-left ion-text>{{distanceCovered | convertdigit}} {{_moveType == Type.walk ? 'm' : 'km'}}</h2>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col>
+            <ion-label>سرعت:</ion-label>
+          </ion-col>
+          <ion-col>
+            <h2 margin-top float-left ion-text>{{speed | convertdigit}} {{_moveType == Type.walk ? 'm/s' : 'km/h'}}</h2>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <h1>asa:{{aaa}}</h1>
+
+      <ion-item *ngIf="calculating">
+        <div class="heart-rate">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="150px" height="73px" viewBox="0 0 150 73" enable-background="new 0 0 150 73" xml:space="preserve">
+            <polyline fill="none" stroke="#009B9E" stroke-width="3" stroke-miterlimit="10" points="0,45.486 38.514,45.486 44.595,33.324 50.676,45.486 57.771,45.486 62.838,55.622 71.959,9 80.067,63.729 84.122,45.486 97.297,45.486 103.379,40.419 110.473,45.486 150,45.486" />
+          </svg>
+          <div class="fade-in"></div>
+          <div class="fade-out"></div>
+        </div>
+      </ion-item>
+
+      <ion-fab center bottom>
+        <button *ngIf="!calculating" ion-fab color="danger" (click)="startCalculation()">شروع</button>
+        <button *ngIf="calculating" ion-fab color="danger" (click)="stopCalculation()">پایان</button>
+      </ion-fab>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
