--- a/src/pages/calculator/calculator.html
+++ b/src/pages/calculator/calculator.html
@@ -33,7 +33,7 @@
             <ion-label>فاصله پیموده شده:</ion-label>
           </ion-col>
           <ion-col>
-            <h2 margin-top float-left ion-text>{{distanceCovered | convertdigit}} {{_moveType == Type.walk ? 'm' : 'km'}}</h2>
+            <h2 margin-top float-left ion-text>{{_moveType == Type.walk ? 'm' : 'km'}} {{distanceCovered | convertdigit}}</h2>
           </ion-col>
         </ion-row>
 
@@ -42,12 +42,10 @@
             <ion-label>سرعت:</ion-label>
           </ion-col>
           <ion-col>
-            <h2 margin-top float-left ion-text>{{speed | convertdigit}} {{_moveType == Type.walk ? 'm/s' : 'km/h'}}</h2>
+            <h2 margin-top float-left ion-text>{{_moveType == Type.walk ? 'm/s' : 'km/h'}} {{speed | convertdigit}}</h2>
           </ion-col>
         </ion-row>
       </ion-grid>
-
-      <h1>asa:{{aaa}}</h1>
 
       <ion-item *ngIf="calculating">
         <div class="heart-rate">
