--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,12 +7,12 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="img-container">
-    <ion-img src="assets/imgs/homepage_logo.png"></ion-img>
-  </div>
+  <ion-item class="img-container">
+    <img src="assets/imgs/homepage_logo.png">
+  </ion-item>
 
-  <div class="btn-container margin-top">
+  <ion-item class="btn-container">
     <button ion-button full margin-top color="secondary" (click)="navigateToCalculationPage()">محاسبه سرعت</button>
     <button ion-button full margin-top (click)="navigateToHistoryPage()">تاریخچه</button>
-  </div>
+  </ion-item>
 </ion-content>
