--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
 
 <ion-content padding>
   <ion-item class="img-container">
-    <img src="assets/imgs/homepage_logo.png">
+    <img src="assets/imgs/homepage_logo.png" >
   </ion-item>
 
-  <ion-item class="btn-container">
+  <div class="btn-container">
     <button ion-button full margin-top color="secondary" (click)="navigateToCalculationPage()">محاسبه سرعت</button>
     <button ion-button full margin-top (click)="navigateToHistoryPage()">تاریخچه</button>
-  </ion-item>
+  </div>
 </ion-content>
