changing a lot of things

--- a/src/pages/calculator/calculator.html
+++ b/src/pages/calculator/calculator.html
@@ -6,19 +6,6 @@
 
 
 <ion-content padding>
-  <ion-item class="rtl">
-    <ion-label>نوع حرکت</ion-label>
-    <ion-select interface="popover" [(ngModel)]="_moveType">
-      <ion-option value="1">
-        <ion-icon item-right name="car"></ion-icon>
-        ماشین
-      </ion-option>
-      <ion-option value="2">
-        <ion-icon item-left name="walk"></ion-icon>
-        پیاده
-      </ion-option>
-    </ion-select>
-  </ion-item>
 
   <ion-card class="rtl">
     <ion-card-content>
@@ -28,8 +15,7 @@
             <ion-label>فاصله پیموده شده:</ion-label>
           </ion-col>
           <ion-col>
-            <h2 margin-top float-left ion-text>{{_moveType == Type.walk ? 'm' : 'km'}} {{distanceCovered |
-              convertdigit}}</h2>
+            <h2 margin-top float-left ion-text>{{distanceCovered | convertdigit}}</h2>
           </ion-col>
         </ion-row>
 
@@ -38,10 +24,12 @@
             <ion-label>سرعت:</ion-label>
           </ion-col>
           <ion-col>
-            <h2 margin-top float-left ion-text>{{_moveType == Type.walk ? 'm/s' : 'km/h'}} {{speed | convertdigit}}</h2>
+            <h2 margin-top float-left ion-text>{{speed | convertdigit}}</h2>
           </ion-col>
         </ion-row>
       </ion-grid>
+
+      aaa: {{aaa | json}}
 
       <ion-item *ngIf="calculating">
         <div class="heart-rate">
