--- a/src/pages/calculator/calculator.html
+++ b/src/pages/calculator/calculator.html
@@ -29,23 +29,28 @@
         </ion-row>
       </ion-grid>
 
-      aaa: {{aaa | json}}
-
-      <ion-item *ngIf="calculating">
-        <div class="heart-rate">
-          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            width="150px" height="73px" viewBox="0 0 150 73" enable-background="new 0 0 150 73" xml:space="preserve">
-            <polyline fill="none" stroke="#009B9E" stroke-width="3" stroke-miterlimit="10" points="0,45.486 38.514,45.486 44.595,33.324 50.676,45.486 57.771,45.486 62.838,55.622 71.959,9 80.067,63.729 84.122,45.486 97.297,45.486 103.379,40.419 110.473,45.486 150,45.486" />
-          </svg>
-          <div class="fade-in"></div>
-          <div class="fade-out"></div>
+      <!-- <ion-item *ngIf="calculating">
+        <div class="speedometer">
+          <span class="speed-marker-1">&nbsp;</span>
+          <span class="speed-marker-2">&nbsp;</span>
+          <span class="speed-marker-3">&nbsp;</span>
+          <span class="speed-marker-4">&nbsp;</span>
+          <span class="speed-marker-5">&nbsp;</span>
+          <span class="speed-marker-6">&nbsp;</span>
+          <span class="speed-marker-7">&nbsp;</span>
+          <span class="speed-marker-8">&nbsp;</span>
+          <span class="speed-marker-9">&nbsp;</span>
+          <span class="speed-marker-10">&nbsp;</span>
+          <span class="speed-marker-11">&nbsp;</span>
+          <span class="speed-marker-12">&nbsp;</span>
+          <span class="speed-marker-13">&nbsp;</span>
+          <p class="speed">{{speed}};<span>km/h</span></p>
         </div>
-      </ion-item>
+      </ion-item> -->
 
-      <ion-fab center bottom>
-        <button *ngIf="!calculating" ion-fab color="danger" (click)="startCalculation()">شروع</button>
-        <button *ngIf="calculating" ion-fab color="danger" (click)="stopCalculation()">پایان</button>
-      </ion-fab>
     </ion-card-content>
   </ion-card>
+
+  <button *ngIf="!calculating" ion-button round full color="danger" (click)="startCalculation()">شروع</button>
+  <button *ngIf="calculating" ion-button round full color="danger" (click)="stopCalculation()">پایان</button>
 </ion-content>
