--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,8 @@
     </ion-row>
     <ion-row align-items-end>
       <ion-col>
-        <button ion-button full round large color="secondary" (click)="navigateToHistoryPage()">تاریخچه<ion-icon name="list-box" margin></ion-icon></button>
+        <button ion-button full round large color="secondary" (click)="navigateToHistoryPage()">تاریخچه<ion-icon name="list-box"
+            margin></ion-icon></button>
       </ion-col>
     </ion-row>
   </ion-grid>
