--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -8,7 +8,5 @@
 
 
 <ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let item of history">{{item | json}}</ion-item>
-  </ion-list>
+  <div id="map" style="height: 100vh; width: 100vh"></div>
 </ion-content>
