debug DB provider

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,7 +2,7 @@
   <ion-grid>
     <ion-row align-items-end>
       <ion-col col-6 offset-2 text-center>
-        <button class="round-btn" ion-button large (click)="navigateToCalculationPage()" margin-right>
+        <button class="round-btn" ion-button color="danger" large (click)="navigateToCalculationPage()" margin-right>
           <span>شروع</span>
         </button>
       </ion-col>
