calculating average speed

--- a/src/pages/calculator/calculator.html
+++ b/src/pages/calculator/calculator.html
@@ -13,7 +13,7 @@
         <ion-label>فاصله پیموده شده:</ion-label>
       </ion-col>
       <ion-col>
-        <h2 margin-top float-left ion-text>{{distanceCovered | convertdigit}}</h2>
+        <h2 margin-top float-left ion-text>km {{distanceCovered | convertdigit}}</h2>
       </ion-col>
     </ion-row>
 
@@ -22,7 +22,7 @@
         <ion-label>سرعت:</ion-label>
       </ion-col>
       <ion-col>
-        <h2 margin-top float-left ion-text>{{speed | convertdigit}}</h2>
+        <h2 margin-top float-left ion-text>km/h {{speed | convertdigit}}</h2>
       </ion-col>
     </ion-row>
   </ion-grid>
