debugging average speed algorithm 2

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -28,7 +28,7 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col>فاصله: {{item.distance}} کیلومتر</ion-col>
+        <ion-col>فاصله: {{item.distance | convertdigit}} کیلومتر</ion-col>
         <ion-col>میانگین سرعت: {{item.avgSpeed | convertdigit}} km/h</ion-col>
       </ion-row>
       <ion-row>
